# llm-lecture-course

./: .gitignore  CLAUDE.md  README.md  course_overview.md  index.html  ml-terms-en-bg.md  notes.txt  pyproject.toml
exams/: exam_version_A.md  exam_version_B.md  exam_version_C.md  exam_version_D.md
lecture_1/: exercises.md  historical_intro.md  lecture_1_intro_ml_nlp.ipynb  lecture_1_plan.md  machine_learning_intro.ipynb  math_sidenote.md
lecture_10/: exercises.md  lecture_10_plan.md  lecture_10_slides.md
lecture_11/: exercises.md  lecture_11_plan.md  lecture_11_slides.md
lecture_12/: exercises.md  lecture_12_plan.md  lecture_12_slides.md
lecture_2/: exercises.md  language_models_word_embeddings.ipynb  lecture_2_plan.md  neural_networks_nlp.ipynb
lecture_3/: exercises.md  lecture_3_plan.md  tokenization.ipynb
lecture_4/: attention_mechanisms.ipynb  exercises.md  lecture_4_plan.md  neural_networks.ipynb
lecture_5/: exercises.md  lecture_5_plan.md  transformer_architecture.ipynb
lecture_6/: exercises.md  foundation_models_pretraining.ipynb  lecture_6_plan.md
lecture_7/: emergent_capabilities.ipynb  exercises.md  lecture_7_plan.md
lecture_8/: exercises.md  lecture_8_plan.md  lecture_8_slides.md
lecture_9/: exercises.md  lecture_9_plan.md  lecture_9_slides.md
lecture_projects/: notes.txt  projects_slides.md
