[project]
name = "llm-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "nltk>=3.9.1",
    "gensim>=4.3.3",
    "transformers>=4.40.0",
    "tiktoken>=0.7.0",
]
